fixed whitespace

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,9 @@ html, body {
     margin: 0;
     padding: 0;
   }  
+body{
+  background-color:aquamarine;
+}
 nav{
     background-color:  #c5b398;
     width: 100%;
@@ -36,11 +39,15 @@ list-style-type: none;
   
 h2{ 
     font-size:225;
-    color: #9a1b1f
+    color: #9a1b1f;
+    display: inline-block;
 }
 h4{
     font-size:150;
     color:aliceblue;
+    display: inline-block;
+    display: inline-block;
+
 }
 h4 a{
   color:aliceblue;
